# foMPI-NA

./: AUTHORS  CHANGES  LICENSE  Makefile  Makefile.inc  Makefile.inc_release  Makefile_release  README.md  TODO  fompi.h  fompi_comm.c  fompi_fortran.c  fompi_helper.c  fompi_internal.h  fompi_internal_ex.h  fompi_notif.c  fompi_notif_uq.c  fompi_notif_uq.h  fompi_notif_xpmem.c  fompi_op.c.m4  fompi_overloaded.c  fompi_req.c  fompi_seg.c  fompi_win_allocate.c  fompi_win_attr.c  fompi_win_create.c  fompi_win_dynamic_create.c  fompi_win_fence.c  fompi_win_free.c  fompi_win_group.c  fompi_win_lock.c  fompi_win_name.c  fompi_win_pscw.c  fompi_win_rma.c  fompif.h  fortran_test_f77.f90  fortran_test_f90.f90  htor_test.cpp  implementation_discussion  module_fompi.f90  (+6 more)
libpgt-0.2/: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  TODO  USAGE  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libpgt-0.2.pc.in  libpgt.cpp  libpgt.h  libpgt_fortran.cpp  libpgt_internal.hpp
libpgt-0.2/config/: hrtimer.m4  ltmain.sh  mpicc.m4  mpicxx.m4  papi.m4
libpgt-0.2/hrtimer/: calibrate.h  getres.c  hrtimer.h  ia64-gcc-itc.h  mips64-sicortex-gcc.h  mpi-wtime.h  ppc-gcc-tb.h  sanity-check.c  x86_32-gcc-rdtsc.h  x86_64-gcc-rdtsc.h
libpgt-0.2/m4/: libtool.m4
libpgt-0.2/tests/: Makefile.am  Makefile.in  test_cxx.cpp
libtopodisc/: Makefile  README  libtopodisc.c  libtopodisc.h  meshmap2d.c  test.cpp
mpitypes/: CHANGES  COPYRIGHT  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  mpitypes-config.h  mpitypes-config.h.in  mpitypes-config.h.in~  mpitypes.pc.in  prepare  stamp-h1
mpitypes/autom4te.cache/: output.1  requests  traces.0  traces.1
mpitypes/install/include/: dataloop_create.h  dataloop_parts.h  mpitypes_dataloop.h
mpitypes/install/lib/pkgconfig/: mpitypes.pc
mpitypes/src/: Makefile.subdir
mpitypes/src/dataloop/: Makefile.subdir  contents_support.c  darray_support.c  dataloop.c  dataloop.h  dataloop_create.c  dataloop_create_blockindexed.c  dataloop_create_contig.c  dataloop_create_indexed.c  dataloop_create_pairtype.c  dataloop_create_struct.c  dataloop_create_vector.c  segment.c  segment_count.c  segment_flatten.c  segment_packunpack.c  subarray_support.c  typesize_support.c  typesize_support.h
mpitypes/src/dataloop/.deps/: contents_support.Po  darray_support.Po  dataloop.Po  dataloop_create.Po  dataloop_create_blockindexed.Po  dataloop_create_contig.Po  dataloop_create_indexed.Po  dataloop_create_pairtype.Po  dataloop_create_struct.Po  dataloop_create_vector.Po  segment.Po  segment_count.Po  segment_flatten.Po  segment_packunpack.Po  subarray_support.Po  typesize_support.Po
mpitypes/src/mpitypes/: Makefile.subdir  mpitypes.c  mpitypes.h  mpitypes_dataloop.c  mpitypes_debug.c  mpitypes_transpack_flatten.c
mpitypes/src/mpitypes/.deps/: mpitypes.Po  mpitypes_dataloop.Po  mpitypes_transpack_flatten.Po
mpitypes/test/: .gitignore  Makefile.subdir  blockindexed-misc-flat.c  blockindexed-misc.c  darray-memcpy-flat.c  darray-memcpy.c  simple-types-memcpy.c  struct-derived-zeros-nocrash.c  struct-empty-el-memcpy.c  struct-ezhov.c  struct-memcpy.c  struct-no-real-types.c  struct-verydeep.c  struct-zero-count-nocrash.c  subarray-memcpy-flat.c  subarray-memcpy.c  transpose-memcpy.c  triangular-memcpy-flat.c  triangular-memcpy.c  vector-memcpy.c
test_address/: Makefile  test_address.f90  test_address_c.c
tests/test_foMPI/: MPI3Rma-tests.batch  Makefile  acc_replace_lock.c  acc_sum_lock.c  cswap_fence.c  cswap_lock.c  cswap_special_fence.c  cswap_special_pscw.c  ddt_1.c  ddt_3.c  dynamic_attach_1.c  dynamic_ddt_1.c  dynamic_ddt_3.c  dynamic_ddt_4.c  dynamic_ddt_5.c  excl_lock.c  fetch_and_op_sum_lock.c  fetch_and_op_sum_pscw.c  fixed_size.c  foMPI-NA-test.batch  get_acc_maxloc_lock.c  get_acc_no_op_lock.c  get_fence.c  lock_exclusive_concurrency.c  main.c  pscw2.c  put_fence.c  put_lock.c  put_pscw.c  racc_sum_lock.c  rget_acc_sum_lock.c  rput_rget_lock.c  symmetric_heap.c  test_mpi3rma.h  win_attr.c  win_name.c
tests/test_foMPI-NA/: Makefile  acc_sum_fence.c  acc_sum_pscw.c  cswap_pscw.c  cswap_special_lock.c  ddt_2.c  dynamic_attach_2.c  dynamic_ddt_2.c  dynamic_ddt_6.c  dynamic_ddt_get_notify_1.c  dynamic_ddt_get_notify_2.c  dynamic_ddt_notify_1.c  dynamic_ddt_notify_2.c  dynamic_ddt_notify_3.c  fetch_and_op_sum_fence.c  foMPI-NA-test-XPMEM.batch  foMPI-NA-test.batch  get_acc_replace_lock.c  get_acc_sum_fence.c  get_acc_sum_lock.c  get_acc_sum_pscw.c  get_fence.c  get_lock.c  get_notify.c  get_pscw.c  main.c  null_pointer.c  pscw1.c  put_consistency.c  put_fence.c  put_notify.c  put_notify_2.c  put_notify_no_data.c  put_notify_no_data_wildcards.c  put_notify_pingpong.c  put_pscw.c  rget_lockall.c  test_dscqueue.c  test_mpi3rma.h  test_xpmem_queue.c  (+1 more)
tests/test_mpi3rma_fortran/: Makefile  TODO  acc_replace_lock.f90  acc_sum_fence.f90  acc_sum_lock.f90  acc_sum_pscw.f90  allocate_c_intrinisic.f90  allocate_cray_ptr.f90  cswap_fence.f90  cswap_lock.f90  cswap_pscw.f90  cswap_special_fence.f90  cswap_special_lock.f90  cswap_special_pscw.f90  ddt_1.f90  ddt_2.f90  ddt_3.f90  dynamic_attach_1.f90  excl_lock.f90  (+34 more)
(+89 files in other folders)
